--- a/pages/pet_care00.html
+++ b/pages/pet_care00.html
@@ -20,14 +20,18 @@
     <link rel="stylesheet" href="../../assets/css/search-1.css">
     <link rel="stylesheet" href="../../assets/css/pet_store.css">
 
+    <!--JavaScript -->
+    <script src="../../js/logo.js"></script>
+
 </head>
 
 <body>
     <!-- Navbar -->
     <nav>
         <section class="logo-container">
-            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo" onclick="goHome()">
         </section>
+
         <section class="auth-buttons">
             <a href="../../index.html">หน้าหลัก</a>
             <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
