--- a/pages/qr_promptpay.html
+++ b/pages/qr_promptpay.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="../../assets/css/navbar.css">
     <link rel="stylesheet" href="../../assets/css/header.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
+
+    <!--JavaScript -->
+    <script src="../../js/logo.js"></script>
+    
     <style>
        
         .container {
@@ -85,8 +89,9 @@
     <!-- Navbar -->
     <nav>
         <section class="logo-container">
-            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo" onclick="goHome()">
         </section>
+
         <section class="auth-buttons">
             <a href="../../index.html">หน้าหลัก</a>
             <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
