--- a/pages/credit_card.html
+++ b/pages/credit_card.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="../../assets/css/globals.css">
     <link rel="stylesheet" href="../../assets/css/navbar.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
+
+    <!--JavaScript -->
+    <script src="../../js/logo.js"></script>
         
     <style>
         
@@ -98,8 +101,9 @@
     <!-- Navbar -->
     <nav>
         <section class="logo-container">
-            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo" onclick="goHome()">
         </section>
+
         <section class="auth-buttons">
             <a href="../../index.html">หน้าหลัก</a>
             <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
