--- a/pages/pet_care/petcare.html
+++ b/pages/pet_care/petcare.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="../../assets/css/footer.css">
     <link rel="stylesheet" href="../../assets/css/search.css">
     <link rel="stylesheet" href="../../assets/css/pet_care.css">
+
+    <!--JavaScript -->
+    <script src="../../js/logo.js"></script>
     
 </head>
 
@@ -26,8 +29,9 @@
     <!-- Navbar -->
     <nav>
         <section class="logo-container">
-            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo" onclick="goHome()">
         </section>
+
         <section class="auth-buttons">
             <a href="../../index.html">หน้าหลัก</a>
             <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
