--- a/pages/my_booking/mybooking-2.html
+++ b/pages/my_booking/mybooking-2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <!-- Meta -->
     <meta charset="UTF-8">
@@ -12,19 +13,25 @@
     <title>Buddy Nest - การจองของฉัน</title>
 
     <!-- CSS -->
-   <link rel="stylesheet" href="../../assets/css/globals.css">
-   <link rel="stylesheet" href="../../assets/css/footer.css">
-   <link rel="stylesheet" href="../../assets/css/nav_booking.css">
-   <link rel="stylesheet" href="../../assets/css/main_booking.css">
-   <link rel="stylesheet" href="../../assets/css/head_booking.css">
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/nav_booking.css">
+    <link rel="stylesheet" href="../../assets/css/main_booking.css">
+    <link rel="stylesheet" href="../../assets/css/head_booking.css">
 
+    <!--JavaScript -->
+    <script src="../../js/logo.js"></script>
+
+    
 </head>
+
 <body>
     <!-- Navbar -->
     <header>
-        <div class="logo-container">
-            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
-        </div>
+        <section class="logo-container">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo" onclick="goHome()">
+        </section>
+
         <div></div> <!-- ช่องว่างสำหรับจัดให้อยู่ขวา -->
         <div class="auth-buttons">
             <a href="../../index.html">หน้าหลัก</a>
@@ -38,7 +45,7 @@
     <nav>
         <div class="tab"><a href="../../pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
         <div class="tab active"><a href="../../pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
-        <div class="tab"><a href="../../pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
+        <div class="tab"><a href="../../pages/my_booking/mybooking-0.html">ยกเลิก</a></div>
     </nav>
 
     <!-- Main -->
@@ -47,7 +54,7 @@
         <h1>ยังไม่มีการจองที่เสร็จสมบูรณ์</h1>
     </main>
     <br><br><br><br><br><br><br><br><br><br><br>
-    
+
     <!-- Footer -->
     <footer class="main-footer">
         <article class="footer-container">
@@ -98,4 +105,5 @@
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
