--- a/pages/pet_care00.html
+++ b/pages/pet_care00.html
@@ -17,11 +17,15 @@
     <link rel="stylesheet" href="../../assets/css/navbar.css">
     <link rel="stylesheet" href="../../assets/css/header.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/search-button.css">
     <link rel="stylesheet" href="../../assets/css/search-1.css">
     <link rel="stylesheet" href="../../assets/css/pet_store.css">
+    <link rel="stylesheet" href="../../assets/css/cards.css">
 
     <!--JavaScript -->
-    <script src="../../js/logo.js"></script>
+    <script defer src="../../js/logo.js"></script>
+    <script defer src="../../js/search.js"></script>
+    <script defer src="../../js/cards.js"></script>
 
 </head>
 
@@ -45,23 +49,12 @@
     </header>
 
     <article class="search-section">
-        <section class="search-container">
-            <div class="search-category">
-                <h4>ฉันกำลังมองหา 🔍</h4>
-                <div class="service-buttons">
-                    <a href="../../pages/pet_care01.html"><button>ฝากเลี้ยง</button></a>
-                    <a href="../../pages/pet_care02.html"><button>ดูแลตามบ้าน</button></a>
-                    <a href="../../pages/pet_care00.html"><button>บริการกรูมมิ่ง</button></a>
-                    <a href="../pages/grab_pet.html"><button>บริการรับ-ส่งสัตว์เลี้ยง</button></a>
-                </div>
-            </div>
-
+        <div class="search-container">
             <section class="search-area">
                 <!-- Header -->
                 <div class="search-area-header">
-                    <h4>ค้นหาบริการสำหรับสัตว์เลี้ยงของคุณ</h4>
+                    <h4>ฉันกำลังมองหา 🔍</h4>
                 </div>
-
                 <div class="search-area-container">
                     <!-- Province -->
                     <select id="province">
@@ -164,82 +157,86 @@
                 <h4>ผลลัพธ์การค้นหา:</h4>
                 <ul id="resultsList"></ul>
             </div>
+        </div>
+
+        <!-- ปุ่มบริการต่างๆ -->
+        <div class="image-button-container">
+            <div class="image-button">
+                <a href="../../pages/pet_care00.html">
+                    <img src="../../img/pet-5.png" alt="ปุ่มกรูมมิ่ง" style="width: 115px;">
+                </a>
+                <p class="button-description">บริการกรูมมิ่ง</p>
             </div>
+
+            <div class="image-button">
+                <a href="../../pages/pet_care02.html">
+                    <img src="../../img/pet-6.png" alt="ปุ่มฝากเลี้ยง" style="width: 120px;">
+                </a>
+                <p class="button-description">บริการฝากเลี้ยง - ดูแลตามบ้าน</p>
+            </div>
+
+            <div class="image-button">
+                <a href="../../pages/grab_pet.html">
+                    <img src="../../img/pet-8.png" alt="ปุ่มรับส่งสัตว์" style="width: 125px;">
+                </a>
+                <p class="button-description">บริการรับ-ส่งสัตว์เลี้ยง</p>
+            </div>
+        </div>
+
     </article>
 
     <br><br>
+
     <!-- Services -->
-    <section class="services">
-        <div class="service-container">
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-2.png" alt="Grooming & Cattery">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: PET DAYCARE</h3>
-                    <p>เวลาทำการ: หยุดวันพุธ เปิด 09.00-18.00น.</p>
-                    <button class="read-more"><a
-                            href="../../pages/pet_care/pet_day_care.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-1.png" alt="PET DAYCARE">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: KIMFAM Grooming & Cattery</h3>
-                    <p>เวลาทำการ: หยุดวันอังคาร เปิด 10.00-20.00น.</p>
-                    <button class="read-more"><a href="../../pages/pet_care/kimfam.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-2.png" alt="Grooming & Cattery">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: PET DAYCARE</h3>
-                    <p>เวลาทำการ: หยุดวันพุธ เปิด 09.00-18.00น.</p>
-                    <button class="read-more"><a
-                            href="../../pages/pet_care/pet_day_care.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-1.png" alt="PET DAYCARE">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: KIMFAM Grooming & Cattery</h3>
-                    <p>เวลาทำการ: หยุดวันอังคาร เปิด 10.00-20.00น.</p>
-                    <button class="read-more"><a href="../../pages/pet_care/kimfam.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-2.png" alt="Grooming & Cattery">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: PET DAYCARE</h3>
-                    <p>เวลาทำการ: หยุดวันพุธ เปิด 09.00-18.00น.</p>
-                    <button class="read-more"><a
-                            href="../../pages/pet_care/pet_day_care.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="../../img/ร้าน-1.png" alt="PET DAYCARE">
-                </div>
-                <div class="service-info">
-                    <h3>ร้าน: KIMFAM Grooming & Cattery</h3>
-                    <p>เวลาทำการ: หยุดวันอังคาร เปิด 10.00-20.00น.</p>
-                    <button class="read-more"><a href="../../pages/pet_care/kimfam.html">อ่านเพิ่มเติม</a></button>
-                </div>
-            </div>
-        </div>
+    <section>
+        <strong style="padding: 50px;; color: #4c4848;">Grooming Services | บริการกรูมมิ่ง</strong>
     </section>
 
+    <article class="cards">
+        <section class="card">
+            <a href="../../pages/pet_care/pet_day_care.html">
+                <img src="../../img/ร้าน-2.png" alt="Dog Bath" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: PET DAYCARE</p>
+            </a>
+        </section>
+        <section class="card">
+            <a href="../../pages/pet_care/moso_hotel.html">
+                <img src="../../img/ร้าน-3.png" alt="Pet Travel" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: MoSo hotel</p>
+            </a>
+        </section>
+
+        <section class="card">
+            <a href="../../pages/pet_care/kimfam.html">
+                <img src="../../img/ร้าน-1.png" alt="Pet Travel" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: KIMFAM Grooming & Cattery</p>
+            </a>
+        </section>
+
+        <section class="card">
+            <a href="../../pages/pet_care/pet_day_care.html">
+                <img src="../../img/ร้าน-2.png" alt="Dog Bath" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: PET DAYCARE</p>
+            </a>
+        </section>
+        <section class="card">
+            <a href="../../pages/pet_care/moso_hotel.html">
+                <img src="../../img/ร้าน-3.png" alt="Pet Travel" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: MoSo hotel</p>
+            </a>
+        </section>
+
+        <section class="card">
+            <a href="../../pages/pet_care/kimfam.html">
+                <img src="../../img/ร้าน-1.png" alt="Pet Travel" style="width: 80%; border-radius: 10px;">
+                <p>ร้าน: KIMFAM Grooming & Cattery</p>
+            </a>
+        </section>
+
+    </article>
+
+
+    <br><br><br>
     <footer class="main-footer">
         <article class="footer-container">
             <!-- Team -->
@@ -287,44 +284,9 @@
     <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        const mockData = [
-            { province: "กรุงเทพมหานคร", petType: "สุนัข", service: "บริการกรูมมิ่งสำหรับสุนัขในกรุงเทพฯ" },
-            { province: "เชียงใหม่", petType: "แมว", service: "ฝากเลี้ยงแมวในเชียงใหม่" },
-            { province: "ภูเก็ต", petType: "กระต่าย", service: "ดูแลกระต่ายรายวันในภูเก็ต" },
-            { province: "ชลบุรี", petType: "แฮมสเตอร์", service: "บริการรับส่งแฮมสเตอร์ในชลบุรี" },
-        ];
-
-        const searchServices = () => {
-            // Variables
-            const province = document.getElementById("province").value;
-            const petType = document.getElementById("pet-type").value;
-            const resultsList = document.getElementById("resultsList");
-            const resultsDiv = document.getElementById("results");
-
-            resultsList.innerHTML = "";
-
-            const filteredResults = mockData.filter(item =>
-                (!province || item.province === province) &&
-                (!petType || item.petType === petType)
-            );
-
-            if (filteredResults.length > 0) {
-                filteredResults.forEach(item => {
-                    const li = document.createElement("li");
-                    li.textContent = item.service;
-                    resultsList.appendChild(li);
-                });
-            } else {
-                const li = document.createElement("li");
-                li.textContent = "ไม่พบผลลัพธ์ที่ตรงกับการค้นหาของคุณ";
-                resultsList.appendChild(li);
-            }
-
-            resultsDiv.style.display = "block";
-        }
-    </script>
 </body>
 
 </html>
+
+
+
